--- a/Source/SEND-12/source/index.html
+++ b/Source/SEND-12/source/index.html
@@ -2,26 +2,30 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Урок HTML разметки</title>
+	<title>Урок HTML разметки 2</title>
 	<meta name="description" content="Урок HTML разметки">
-	<meta name="keywords" content="html, Lesson">
+	<meta name="keywords" content="html,Lesson">
+
 </head>
 <body>
 	<div class="content">
-		<h1>FructCode</h1>
-		<p>300 тысяч фунтов стерлингов было потрачено <span class="colorWorld">британскими учеными</span> на изучение взаимодействия уток с водой. В результате длительного исследования им удалось выяснить, что всем остальным способам провести время в воде утки предпочитают дождь, который заменяет им душ.</p>
+		<h1>Урок HTML разметки</h1>
+		<p>300 тысяч фунтов стерлингов было потрачено <span class="color_world">британскими учеными</span> на изучение взаимодействия уток с водой. В результате длительного исследования им удалось выяснить, что всем остальным способам провести время в воде утки предпочитают дождь, который заменяет им душ.</p>
+		
 		<p>Еще одно шокирующее открытие исследователей с Туманного Альбиона наконец объяснило страдающим от избыточного веса, в чем заключается их проблема. В ходе научного эксперимента британским ученым удалось установить, что худые люди, как правило, едят меньше, чем полные.</p>
 	</div>
 
 	<style type="text/css">
+
 		.content {
 			width: 300px;
-			background-color: green;
 		}
 
-		.colorWorld {
+		.color_world {
 			color: red;
 		}
+
 	</style>
+
 </body>
 </html>
