--- a/KinoMonster/index.html
+++ b/KinoMonster/index.html
@@ -27,6 +27,29 @@
 				</ul>
 			</div>
 		</div>
+
+		<div class="site_content">
+			<div class="sidebar_container">
+				<div class="sidebar">
+					<h2>Поиск</h2>
+					<form method="post" action="#" id="search_from">
+						<input type="search" name="search_field" placeholder="Ваш запрос" />
+						<input type="submit" class="btn" value="Найти" />
+					</form>
+				</div>
+				<div class="sidebar">
+					<h2>Вход</h2>
+					<form method="post" action="#" id="login">
+						<input type="text" name="login_field" placeholder="Логин" />
+						<input type="password" name="password_field" placeholder="Пароль" />
+						<input type="submit" class="btn" value="Войти" />
+						<div class="lables_passreg_text">
+							<span><a href="#">Забыли пароль?</a></span> | <span><a href="#">Регистрация</a></span>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
