Добавлена страница с описанием фильма

--- a/KinoMonster/index.html
+++ b/KinoMonster/index.html
@@ -48,7 +48,70 @@
 						</div>
 					</form>
 				</div>
+
+				<div class="sidebar">
+					<h2>Новости</h2>
+					<span>31.02.2019</span>
+					<p>Мы запустили расширенный поиск</p>
+					<a href="#">читать</a>
+				</div>
+
+				<div class="sidebar">
+					<h2>Рейтинг фильмов</h2>
+					<ul>
+						<li><a href="#">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+						<li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
+						<li><a href="#">Безмуный Макс</a><span class="rating_sidebar">7.5</span></li>
+						<li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
+					</ul>
+				</div>
 			</div>
+			<div class="content">
+				<h1>Новые фильмы</h1>
+				<div class="films_block">
+					<a href="#"><img src="Assets/Images/matrix.png" alt=""></a>
+					<a href="#"><img src="Assets/Images/max.png" alt=""></a>
+					<a href="show.html"><img src="Assets/Images/inter.png" alt=""></a>
+					<a href="#"><img src="Assets/Images/cloud.png" alt=""></a>
+				</div>
+				<h1>Сериалы</h1>
+				<div class="films_block">
+					<a href="#"><img src="Assets/Images/dead.png" alt=""></a>
+					<a href="#"><img src="Assets/Images/silicon.png" alt=""></a>
+					<a href="#"><img src="Assets/Images/breakingbad.png" alt=""></a>
+					<a href="#"><img src="Assets/Images/xfiles.png" alt=""></a>
+				</div>
+
+				<div class="posts">
+					<hr>
+					<h2><a href="#">Как снимали Интерстеллар</a></h2>
+					<div class="posts_content">
+						<p>
+							45 лет исполнилось Кристоферу Нолану — одному из самых успешных режиссеров нашего времени, чьи работы одинаково любимы как взыскательными критиками, так и простыми зрителями. Фильмом изначально занималась студия Paramount. Когда Кристофер Нолан занял место режиссера, студия Warner Bros., которая выпускала его последние фильмы, добилась участия в проекте.
+						</p>
+					</div>
+					<p><a href="#">читать</a></p>
+					<hr>
+					<h2><a href="#">Актер Том Хэнкс поделился впечатлениями о фестивале</a></h2>
+					<div class="posts_content">
+						<p>
+							16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем репортаже.
+						</p>
+					</div>
+					<p><a href="#">читать</a></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer">
+			<p>
+				<a href="#">Главная</a> |
+				<a href="#">Фильмы</a> |
+				<a href="#">Сериалы</a> |
+				<a href="#">Рейтинг фильмов</a> |
+				<a href="#">Контакты</a>
+			</p>
+			<p>wh-db.com 2020</p>
 		</div>
 	</div>
 </body>
