--- a/KinoMonster/contacts.html
+++ b/KinoMonster/contacts.html
@@ -23,7 +23,7 @@
 					<li><a href="#">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
 					<li><a href="#">Рейтинг фильмов</a></li>
-					<li><a href="contacts.html">Контакты</a></li>
+					<li><a href="#">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
@@ -67,39 +67,18 @@
 				</div>
 			</div>
 			<div class="content">
-				<h1>Новые фильмы</h1>
-				<div class="films_block">
-					<a href="#"><img src="Assets/Images/matrix.png" alt=""></a>
-					<a href="#"><img src="Assets/Images/max.png" alt=""></a>
-					<a href="show.html"><img src="Assets/Images/inter.png" alt=""></a>
-					<a href="#"><img src="Assets/Images/cloud.png" alt=""></a>
-				</div>
-				<h1>Сериалы</h1>
-				<div class="films_block">
-					<a href="#"><img src="Assets/Images/dead.png" alt=""></a>
-					<a href="#"><img src="Assets/Images/silicon.png" alt=""></a>
-					<a href="#"><img src="Assets/Images/breakingbad.png" alt=""></a>
-					<a href="#"><img src="Assets/Images/xfiles.png" alt=""></a>
-				</div>
-
-				<div class="posts">
-					<hr>
-					<h2><a href="#">Как снимали Интерстеллар</a></h2>
-					<div class="posts_content">
-						<p>
-							45 лет исполнилось Кристоферу Нолану — одному из самых успешных режиссеров нашего времени, чьи работы одинаково любимы как взыскательными критиками, так и простыми зрителями. Фильмом изначально занималась студия Paramount. Когда Кристофер Нолан занял место режиссера, студия Warner Bros., которая выпускала его последние фильмы, добилась участия в проекте.
-						</p>
-					</div>
-					<p><a href="#">читать</a></p>
-					<hr>
-					<h2><a href="#">Актер Том Хэнкс поделился впечатлениями о фестивале</a></h2>
-					<div class="posts_content">
-						<p>
-							16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем репортаже.
-						</p>
-					</div>
-					<p><a href="#">читать</a></p>
-				</div>
+                <h2>Контакты</h2>
+                <p>
+                    Оставьте отзыв о портале КиноМонстр
+                </p>
+                <div class="send">
+                    <form method="post" action="#" id="contacts">
+                        <input type="text" name="review_name" placeholder="Ваше имя">
+                        <input type="text" name="review_question" placeholder="Ваш e-mail">
+                        <textarea name="review_text"></textarea>
+                        <input type="submit" class="btn" value="Отправить">
+                    </form>
+                </div>
 			</div>
 		</div>
 
@@ -109,7 +88,7 @@
 				<a href="#">Фильмы</a> |
 				<a href="#">Сериалы</a> |
 				<a href="#">Рейтинг фильмов</a> |
-				<a href="contacts.html">Контакты</a>
+				<a href="#">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
 		</div>
