Добавлен стиль для мобильных устройств

--- a/KinoMonster/ratings.html
+++ b/KinoMonster/ratings.html
@@ -68,18 +68,38 @@
 				</div>
 			</div>
 			<div class="content">
-                <h2>Контакты</h2>
-                <p>
-                    Оставьте отзыв о портале КиноМонстр
-                </p>
-                <div class="send">
-                    <form method="post" action="#" id="contacts">
-                        <input type="text" name="review_name" placeholder="Ваше имя">
-                        <input type="text" name="review_question" placeholder="Ваш e-mail">
-                        <textarea name="review_text"></textarea>
-                        <input type="submit" class="btn" value="Отправить">
-                    </form>
-                </div>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Фильмы</th>
+                        <th class="center">Год</th>
+                        <th class="center">Рейтинг</th>
+                    </tr>
+                    <tr>
+                        <td class="center"><img src="Assets/Images/inter.png" alt=""></td>
+                        <td>1. <a href="show.html">Интерстеллар</a></td>
+                        <td class="center">2014</td>
+                        <td class="center rating">8.1</td>
+                    </tr>
+                    <tr>
+                        <td class="center"><img src="Assets/Images/matrix.png" alt=""></td>
+                        <td>2. <a href="show.html">Матрица</a></td>
+                        <td class="center">1999</td>
+                        <td class="center rating">8.0</td>
+                    </tr>
+                    <tr>
+                        <td class="center"><img src="Assets/Images/max.png" alt=""></td>
+                        <td>3. <a href="show.html">Безумный Макс</a></td>
+                        <td class="center">2015</td>
+                        <td class="center rating">7.5</td>
+                    </tr>
+                    <tr>
+                        <td class="center"><img src="Assets/Images/cloud.png" alt=""></td>
+                        <td>4. <a href="show.html">Облачный атлас</a></td>
+                        <td class="center">2013</td>
+                        <td class="center rating">7.4</td>
+                    </tr>
+                </table>
 			</div>
 		</div>
 
