--- a/KinoMonster/films.html
+++ b/KinoMonster/films.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<meta name="description" content="КиноМонстр - это портал о кино">
 	<meta name="keywords" content="Фильмы, Кино, Сериалы">
@@ -19,12 +19,12 @@
 			</div>
 			<div class="menubar">
 				<ul class="menu">
-					<li class="selected"><a href="#">Главная</a></li>
+					<li><a href="#">Главная</a></li>
 					<!-- # означает, что ссылка не будет работать -->
-					<li><a href="#">Фильмы</a></li>
+					<li class="selected"><a href="#">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
 					<li><a href="#">Рейтинг фильмов</a></li>
-					<li><a href="#">Контакты</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
@@ -67,46 +67,27 @@
 					</ul>
 				</div>
 			</div>
-
-            <div class="content">
-                <h1>Интерстеллар</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xHGRCBV46ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="info_film_page">
-                    <span class="label">Рейтинг: </span><span class="value">8.1 / 10</span>
-                    <span class="label">Год: </span><span class="value">2014</span>
-                    <span class="label">Режиссер: </span><span class="value">Кристофер Нолан</span>
-                </div>
-                <hr>
-                <h2>Описание Интерстеллар</h2>
-                <div class="description_film">
+			<div class="content">
+                <div class="info_film">
                     <img src="Assets/Images/inter.png" alt="">
                     Когда засуха, пыльные бури и вымирание растений приводят человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и найти планету с подходящими для человечества условиями.
+                    <div class="button"><a href="show.html">Смотреть</a></div>
                 </div>
-                <hr>
-                <h2>Отзывы об Интерстеллар</h2>
-                <div class="reviews">
-                    <div class="review_name">
-                        Сергей
-                    </div>
-                    <div class="review_text">
-                        Отличный фильм, 3 часа пролетели незаметно.
-                    </div>
-                    <div class="review_name">
-                        Анатолий
-                    </div>
-                    <div class="review_text">
-                        Очень хорошая музыка, нигде такой больше нет.
-                    </div>
+                <div class="info_film">
+                    <img src="Assets/Images/max.png" alt="">
+                    Преследуемый призраками беспокойного прошлого Макс уверен, что лучший способ выжить — скитаться в одиночестве. Несмотря на это, он присоединяется к бунтарям, бегущим через всю пустыню на боевой фуре, под предводительством отчаянной Фуриосы.
+                    Они пытаются сбежать из Цитадели, страдающей от тирании Несмертного Джо, у которого они забрали кое-что очень ценное. Разъярённый военачальник бросает все свои силы на погоню за мятежниками, ступая на дорогу войны — дорогу ярости.
+                    <div class="button"><a href="#">Смотреть</a></div>
                 </div>
-                <div class="send">
-                    <form method="post" action="#" id="review">
-                        <input type="text" name="review_name" placeholder="Ваше имя">
-                        <textarea name="review_text"></textarea>
-                        <input type="submit" class="btn" value="Отправить">
-                    </form>
+                <div class="info_film">
+                    <img src="Assets/Images/matrix.png" alt="">
+                    Жизнь Томаса Андерсона разделена на две части: днём он — самый обычный офисный работник, получающий нагоняи от начальства, а ночью превращается в хакера по имени Нео, и нет места в сети, куда он не смог бы дотянуться. Но однажды всё меняется — герой, сам того не желая, узнаёт страшную правду: всё, что его окружает — не более, чем иллюзия, Матрица, а люди — всего лишь источник питания для искусственного интеллекта, поработившего человечество. И только Нео под силу изменить расстановку сил в этом чужом и страшном мире.
+                    <div class="button"><a href="#">Смотреть</a></div>
                 </div>
-            </div>
-
+                <div class="info_film">
+                    <img src="Assets/Images/cloud.png" alt="">
+                    Шесть историй — пять реинкарнаций, происходящих в разное время, тесно переплетаются между собой…                    <div class="button"><a href="#">Смотреть</a></div>
+                </div>
 			</div>
 		</div>
 
@@ -116,7 +97,7 @@
 				<a href="#">Фильмы</a> |
 				<a href="#">Сериалы</a> |
 				<a href="#">Рейтинг фильмов</a> |
-				<a href="#">Контакты</a>
+				<a href="contacts.html">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
 		</div>
