--- a/KinoMonster/index.html
+++ b/KinoMonster/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<meta name="description" content="КиноМонстр - это портал о кино">
 	<meta name="keywords" content="Фильмы, Кино, Сериалы">
@@ -20,7 +21,7 @@
 				<ul class="menu">
 					<li class="selected"><a href="#">Главная</a></li>
 					<!-- # означает, что ссылка не будет работать -->
-					<li><a href="#">Фильмы</a></li>
+					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
 					<li><a href="#">Рейтинг фильмов</a></li>
 					<li><a href="contacts.html">Контакты</a></li>
@@ -106,9 +107,9 @@
 		<div class="footer">
 			<p>
 				<a href="#">Главная</a> |
-				<a href="#">Фильмы</a> |
+				<a href="films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
-				<a href="#">Рейтинг фильмов</a> |
+				<a href="ratings.html">Рейтинг фильмов</a> |
 				<a href="contacts.html">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
