Добавлены ссылки на все страницы, установлен Bootstrap

--- a/KinoMonster/films.html
+++ b/KinoMonster/films.html
@@ -19,11 +19,11 @@
 			</div>
 			<div class="menubar">
 				<ul class="menu">
-					<li><a href="#">Главная</a></li>
+					<li><a href="index.html">Главная</a></li>
 					<!-- # означает, что ссылка не будет работать -->
-					<li class="selected"><a href="#">Фильмы</a></li>
+					<li class="selected"><a href="films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
-					<li><a href="#">Рейтинг фильмов</a></li>
+					<li><a href="ratings.html">Рейтинг фильмов</a></li>
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</div>
@@ -60,7 +60,7 @@
 				<div class="sidebar">
 					<h2>Рейтинг фильмов</h2>
 					<ul>
-						<li><a href="#">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+						<li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
 						<li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
 						<li><a href="#">Безмуный Макс</a><span class="rating_sidebar">7.5</span></li>
 						<li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
@@ -86,17 +86,18 @@
                 </div>
                 <div class="info_film">
                     <img src="Assets/Images/cloud.png" alt="">
-                    Шесть историй — пять реинкарнаций, происходящих в разное время, тесно переплетаются между собой…                    <div class="button"><a href="#">Смотреть</a></div>
+                    Шесть историй — пять реинкарнаций, происходящих в разное время, тесно переплетаются между собой…
+                    <div class="button"><a href="#">Смотреть</a></div>
                 </div>
 			</div>
 		</div>
 
 		<div class="footer">
 			<p>
-				<a href="#">Главная</a> |
-				<a href="#">Фильмы</a> |
+				<a href="index.html">Главная</a> |
+				<a href="films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
-				<a href="#">Рейтинг фильмов</a> |
+				<a href="ratings.html">Рейтинг фильмов</a> |
 				<a href="contacts.html">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
