--- a/KinoMonster/index.html
+++ b/KinoMonster/index.html
@@ -23,7 +23,7 @@
 					<!-- # означает, что ссылка не будет работать -->
 					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
-					<li><a href="#">Рейтинг фильмов</a></li>
+					<li><a href="ratings.html">Рейтинг фильмов</a></li>
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</div>
@@ -60,7 +60,7 @@
 				<div class="sidebar">
 					<h2>Рейтинг фильмов</h2>
 					<ul>
-						<li><a href="#">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+						<li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
 						<li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
 						<li><a href="#">Безмуный Макс</a><span class="rating_sidebar">7.5</span></li>
 						<li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
@@ -106,7 +106,7 @@
 
 		<div class="footer">
 			<p>
-				<a href="#">Главная</a> |
+				<a href="index.html">Главная</a> |
 				<a href="films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
 				<a href="ratings.html">Рейтинг фильмов</a> |
