--- a/KinoMonster/ratings.html
+++ b/KinoMonster/ratings.html
@@ -19,12 +19,12 @@
 			</div>
 			<div class="menubar">
 				<ul class="menu">
-					<li><a href="#">Главная</a></li>
+					<li><a href="index.html">Главная</a></li>
 					<!-- # означает, что ссылка не будет работать -->
-					<li><a href="#">Фильмы</a></li>
+					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
-					<li><a href="#">Рейтинг фильмов</a></li>
-					<li class="selected"><a href="#">Контакты</a></li>
+					<li class="selected"><a href="ratings.html">Рейтинг фильмов</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 				<div class="sidebar">
 					<h2>Рейтинг фильмов</h2>
 					<ul>
-						<li><a href="#">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+						<li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
 						<li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
 						<li><a href="#">Безмуный Макс</a><span class="rating_sidebar">7.5</span></li>
 						<li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
@@ -83,19 +83,19 @@
                     </tr>
                     <tr>
                         <td class="center"><img src="Assets/Images/matrix.png" alt=""></td>
-                        <td>2. <a href="show.html">Матрица</a></td>
+                        <td>2. <a href="#">Матрица</a></td>
                         <td class="center">1999</td>
                         <td class="center rating">8.0</td>
                     </tr>
                     <tr>
                         <td class="center"><img src="Assets/Images/max.png" alt=""></td>
-                        <td>3. <a href="show.html">Безумный Макс</a></td>
+                        <td>3. <a href="#">Безумный Макс</a></td>
                         <td class="center">2015</td>
                         <td class="center rating">7.5</td>
                     </tr>
                     <tr>
                         <td class="center"><img src="Assets/Images/cloud.png" alt=""></td>
-                        <td>4. <a href="show.html">Облачный атлас</a></td>
+                        <td>4. <a href="#">Облачный атлас</a></td>
                         <td class="center">2013</td>
                         <td class="center rating">7.4</td>
                     </tr>
@@ -105,11 +105,11 @@
 
 		<div class="footer">
 			<p>
-				<a href="#">Главная</a> |
-				<a href="#">Фильмы</a> |
+				<a href="index.html">Главная</a> |
+				<a href="films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
-				<a href="#">Рейтинг фильмов</a> |
-				<a href="#">Контакты</a>
+				<a href="ratings.html">Рейтинг фильмов</a> |
+				<a href="contacts.html">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
 		</div>
