--- a/KinoMonster/contacts.html
+++ b/KinoMonster/contacts.html
@@ -19,12 +19,12 @@
 			</div>
 			<div class="menubar">
 				<ul class="menu">
-					<li><a href="#">Главная</a></li>
+					<li><a href="index.html">Главная</a></li>
 					<!-- # означает, что ссылка не будет работать -->
-					<li><a href="#">Фильмы</a></li>
+					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
-					<li><a href="#">Рейтинг фильмов</a></li>
-					<li class="selected"><a href="#">Контакты</a></li>
+					<li><a href="ratings.html">Рейтинг фильмов</a></li>
+					<li class="selected"><a href="contacts.html">Контакты</a></li>
 				</ul>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 				<div class="sidebar">
 					<h2>Рейтинг фильмов</h2>
 					<ul>
-						<li><a href="#">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+						<li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
 						<li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
 						<li><a href="#">Безмуный Макс</a><span class="rating_sidebar">7.5</span></li>
 						<li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
@@ -85,11 +85,11 @@
 
 		<div class="footer">
 			<p>
-				<a href="#">Главная</a> |
-				<a href="#">Фильмы</a> |
+				<a href="index.html">Главная</a> |
+				<a href="films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
-				<a href="#">Рейтинг фильмов</a> |
-				<a href="#">Контакты</a>
+				<a href="ratings.html">Рейтинг фильмов</a> |
+				<a href="contacts.html">Контакты</a>
 			</p>
 			<p>wh-db.com 2020</p>
 		</div>
