--- a/KinoMonster Bootstrap/index.html
+++ b/KinoMonster Bootstrap/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="Assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Assets/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,19 +19,71 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container" style="background-color: red; height: 100px">
-        <h1>Hello, world!</h1>
-    </div>
-    <div class="container-fluid" style="background-color: blue; height: 100px">
-        <h1>Hello, world!</h1>
-    </div>
-    <div class="container-fluid" style="background-color: green; height: 100px">
+
+    <div class="container-fluid">
         <div class="row">
-            <h1>Hello, world!</h1>
+            <nav role="navigation" class="navbar navbar-inverse">
+                <div class="container">
+
+                  <div class="navbar-header header">
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <h1><a href="#">КиноМонстр</a></h1>
+                          <p>Кино - наша страсть!</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                      <span class="sr-only">
+                        Toggle navigation
+                      </span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                  </div>
+
+                  <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+                    <ul class="nav nav-pills">
+                      <li class="active"><a href="#">Главная</a></li>
+                      <li><a href="#">Фильмы</a></li>
+                      <li><a href="#">Сериалы</a></li>
+                      <li><a href="#">Рейтинг</a></li>
+                      <li><a href="#">Контакты</a></li>
+                    </ul>
+                  </div>
+                </div>
+            </nav>
         </div>
-        <div class="col-lg-8 col-md-8 col-lg-push-3" style="background-color: yellow; height: 100px"></div>
-        <div class="col-lg-4 col-md-4 col-lg-pull-9 hidden-xs" style="background-color: black; height: 100px"></div>
     </div>
+
+    <div class="wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9">
+
+                </div>
+                <div class="col-lg-3">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="clear">
+
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <p class="text-center">
+                <a href="#">.com</a>
+            </p>
+        </div>
+    </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
