--- a/KinoMonster Bootstrap/index.html
+++ b/KinoMonster Bootstrap/index.html
@@ -63,78 +63,22 @@
     <div class="wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <div class="sideber-header">
-                                Поиск
+                <div class="col-lg-9 col-lg-push-3">
+
+                    <form role="search" class="visible-xs">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <!-- <span class="input-group-addon">@</span> -->
+                                <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default btn-lg" type="submit">
+                                        <i class="glyphicon glyphicon-search"></i>
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                        <div class="panel-body">
-                            <form role="search">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
-                                        <div class="input-group-btn">
-                                            <button class="btn btn-default btn-lg" type="submit">
-                                                <i class="glyphicon glyphicon-search"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+                    </form>
 
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <div class="sideber-header">
-                                Вход
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <form role="form">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-lg" placeholder="Логин">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control input-lg" placeholder="Пароль">
-                                </div>
-                                <button type="submit" class="btn btn-warning pull-right" name="button">Вход</button>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <div class="sideber-header">
-                                Рейтинг
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-warning">
-                                    <span class="badge">8.9</span>
-                                    <a href="#">Интерстеллар</a>
-                                </li>
-                                <li class="list-group-item list-group-item-warning">
-                                    <span class="badge">8.7</span>
-                                    <a href="#">Безумный Макс</a>
-                                </li>
-                                <li class="list-group-item list-group-item-warning">
-                                    <span class="badge">8.3</span>
-                                    <a href="#">Матрица</a>
-                                </li>
-                                <li class="list-group-item list-group-item-warning">
-                                    <span class="badge">8.1</span>
-                                    <a href="#">Облачный атлас</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-9">
                     <h2>Новые фильмы</h2>
                     <hr>
                     <div class="row">
@@ -196,6 +140,91 @@
 
                     <div class="margin-8 clear"></div>
                 </div>
+
+                <div class="col-lg-3 col-lg-pull-9">
+                    <div class="panel panel-info hidden-xs">
+                        <div class="panel-heading">
+                            <div class="sideber-header">
+                                Поиск
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <form role="search">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                                        <div class="input-group-btn">
+                                            <button class="btn btn-default btn-lg" type="submit">
+                                                <i class="glyphicon glyphicon-search"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sideber-header">
+                                Вход
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <form role="form">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" placeholder="Логин">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control input-lg" placeholder="Пароль">
+                                </div>
+                                <button type="submit" class="btn btn-warning pull-right" name="button">Вход</button>
+                            </form>
+                        </div>
+                    </div>
+
+
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sidebar-header">
+                                Новости
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <p>31.02.2017</p>
+                            <p>Мы запустили новый сервис</p>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sideber-header">
+                                Рейтинг
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="list-group">
+                                <li class="list-group-item list-group-item-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="#">Интерстеллар</a>
+                                </li>
+                                <li class="list-group-item list-group-item-warning">
+                                    <span class="badge">8.7</span>
+                                    <a href="#">Безумный Макс</a>
+                                </li>
+                                <li class="list-group-item list-group-item-warning">
+                                    <span class="badge">8.3</span>
+                                    <a href="#">Матрица</a>
+                                </li>
+                                <li class="list-group-item list-group-item-warning">
+                                    <span class="badge">8.1</span>
+                                    <a href="#">Облачный атлас</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
