--- a/KinoMonster Bootstrap/index.html
+++ b/KinoMonster Bootstrap/index.html
@@ -48,8 +48,8 @@
 
                   <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                     <ul class="nav nav-pills">
-                      <li class="active"><a href="#">Главная</a></li>
-                      <li><a href="#">Фильмы</a></li>
+                      <li class="active"><a href="index.html">Главная</a></li>
+                      <li><a href="films.html">Фильмы</a></li>
                       <li><a href="#">Сериалы</a></li>
                       <li><a href="#">Рейтинг</a></li>
                       <li><a href="#">Контакты</a></li>
@@ -206,7 +206,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item list-group-item-warning">
                                     <span class="badge">8.9</span>
-                                    <a href="#">Интерстеллар</a>
+                                    <a href="show.html">Интерстеллар</a>
                                 </li>
                                 <li class="list-group-item list-group-item-warning">
                                     <span class="badge">8.7</span>
