--- a/KinoMonster Bootstrap/index.html
+++ b/KinoMonster Bootstrap/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,47 +14,47 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
 
     <div class="container-fluid">
         <div class="row">
             <nav role="navigation" class="navbar navbar-inverse">
                 <div class="container">
 
-                  <div class="navbar-header header">
+                    <div class="navbar-header header">
 
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <h1><a href="#">КиноМонстр</a></h1>
-                          <p>Кино - наша страсть!</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h1><a href="#">КиноМонстр</a></h1>
+                                    <p>Кино - наша страсть!</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
+
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">
+                                Toggle navigation
+                            </span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     </div>
 
-                    <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-                      <span class="sr-only">
-                        Toggle navigation
-                      </span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
-                  </div>
-
-                  <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
-                    <ul class="nav nav-pills">
-                      <li class="active"><a href="index.html">Главная</a></li>
-                      <li><a href="films.html">Фильмы</a></li>
-                      <li><a href="#">Сериалы</a></li>
-                      <li><a href="#">Рейтинг</a></li>
-                      <li><a href="#">Контакты</a></li>
-                    </ul>
-                  </div>
+                    <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+                        <ul class="nav nav-pills">
+                            <li class="active"><a href="index.html">Главная</a></li>
+                            <li><a href="films.html">Фильмы</a></li>
+                            <li><a href="#">Сериалы</a></li>
+                            <li><a href="rating.html">Рейтинг</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -245,5 +245,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="Assets/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
