--- a/KinoMonster Bootstrap/rating.html
+++ b/KinoMonster Bootstrap/rating.html
@@ -44,11 +44,11 @@
                     </div>
                     <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                         <ul class="nav nav-pills">
-                            <li><a href="index.html">Главная</a></li>
-                            <li class="active"><a href="films.html">Фильмы</a></li>
-                            <li><a href="#">Сериалы</a></li>
-                            <li><a href="rating.html">Рейтинг</a></li>
-                            <li><a href="contact.html">Контакты</a></li>
+                            <li>  <a href="index.html">Главная</a> </li>
+                            <li> <a href="films.html">Фильмы</a> </li>
+                            <li> <a href="#">Сериалы</a> </li>
+                            <li class="active"><a href="rating.html">Рейтинг</a></li>
+                            <li> <a href="contact.html">Контакты</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -71,76 +71,88 @@
                         </div>
                     </form>
 
-                    <h1>Фильмы</h1>
+                    <h1>Рейтинг фильмов</h1>
                     <hr>
-                    <div class="row">
-                        <div class="well clearfix">
-                            <div class="col-lg-3 col-md-2 text-center">
-                                <img class="img-thumbnail" src="Assets/img/inter.png" alt="Интерстеллар">
-                                <p>Интерстеллар</p>
-                            </div>
-                            <div class="col-lg-9 col-md-10">
-                                <p>
-                                    Когда засуха, пыльные бури и вымирание растений приводят человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и найти планету с подходящими для человечества условиями.
-                                </p>
-                            </div>
-                            <div class="col-lg-12">
-                                <a href="#" class="btn btn-lg btn-warning pull-right">Подробнее</a>
-                            </div>
-                        </div>
-                    </div>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Фильм</th>
+                                <th class="text-center">Год</th>
+                                <th class="text-center">Рейтинг</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src="Assets/img/inter.png" alt="Интерстеллар">
+                                </td>
+                                <td class="vert-align">
+                                    <a href="show.html">Интерстеллар</a>
+                                </td>
+                                <td class="text-center vert-align">
+                                    2014
+                                </td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">
+                                        8.9
+                                    </span>
+                                </td>
+                            </tr>
 
-                    <div class="row">
-                        <div class="well clearfix">
-                            <div class="col-lg-3 col-md-2 text-center">
-                                <img class="img-thumbnail" src="Assets/img/matrix.png" alt="Матрица">
-                                <p>Матрица</p>
-                            </div>
-                            <div class="col-lg-9 col-md-10">
-                                <p>
-                                    Жизнь Томаса Андерсона разделена на две части: днём он — самый обычный офисный работник, получающий нагоняи от начальства, а ночью превращается в хакера по имени Нео, и нет места в сети, куда он не смог бы дотянуться. Но однажды всё меняется — герой, сам того не желая, узнаёт страшную правду: всё, что его окружает — не более, чем иллюзия, Матрица, а люди — всего лишь источник питания для искусственного интеллекта, поработившего человечество. И только Нео под силу изменить расстановку сил в этом чужом и страшном мире.
-                                </p>
-                            </div>
-                            <div class="col-lg-12">
-                                <a href="#" class="btn btn-lg btn-warning pull-right">Подробнее</a>
-                            </div>
-                        </div>
-                    </div>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src="Assets/img/cloud.png" alt="Облачный атлас">
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Облачный атлас</a>
+                                </td>
+                                <td class="text-center vert-align">
+                                    2013
+                                </td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">
+                                        8.7
+                                    </span>
+                                </td>
+                            </tr>
 
-                    <div class="row">
-                        <div class="well clearfix">
-                            <div class="col-lg-3 col-md-2 text-center">
-                                <img class="img-thumbnail" src="Assets/img/cloud.png" alt="Облачный атлас">
-                                <p>Облачный атлас</p>
-                            </div>
-                            <div class="col-lg-9 col-md-10">
-                                <p>
-                                    Шесть историй — пять реинкарнаций, происходящих в разное время, тесно переплетаются между собой…
-                                </p>
-                            </div>
-                            <div class="col-lg-12">
-                                <a href="#" class="btn btn-lg btn-warning pull-right">Подробнее</a>
-                            </div>
-                        </div>
-                    </div>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src="Assets/img/matrix.png" alt="Матрица">
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Матрица</a>
+                                </td>
+                                <td class="text-center vert-align">
+                                    1999
+                                </td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">
+                                        8.3
+                                    </span>
+                                </td>
+                            </tr>
 
-                    <div class="row">
-                        <div class="well clearfix">
-                            <div class="col-lg-3 col-md-2 text-center">
-                                <img class="img-thumbnail" src="Assets/img/max.png" alt="Безумный Макс">
-                                <p>Безумный Макс</p>
-                            </div>
-                            <div class="col-lg-9 col-md-10">
-                                <p>
-                                    Преследуемый призраками беспокойного прошлого Макс уверен, что лучший способ выжить — скитаться в одиночестве. Несмотря на это, он присоединяется к бунтарям, бегущим через всю пустыню на боевой фуре, под предводительством отчаянной Фуриосы.
-                                    Они пытаются сбежать из Цитадели, страдающей от тирании Несмертного Джо, у которого они забрали кое-что очень ценное. Разъярённый военачальник бросает все свои силы на погоню за мятежниками, ступая на дорогу войны — дорогу ярости.
-                                </p>
-                            </div>
-                            <div class="col-lg-12">
-                                <a href="#" class="btn btn-lg btn-warning pull-right">Подробнее</a>
-                            </div>
-                        </div>
-                    </div>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src="Assets/img/max.png" alt="Безумный Макс">
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Безумный Макс</a>
+                                </td>
+                                <td class="text-center vert-align">
+                                    2013
+                                </td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">
+                                        8.1
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
 
                     <div class="margin-8 clear">
 
